variables imports fix and spacing function added to variables

--- a/design-system/projects/kakal-ui/src/styles/_variables.scss
+++ b/design-system/projects/kakal-ui/src/styles/_variables.scss
@@ -32,3 +32,8 @@ $colors: (
     // success: $success,
     // success-light: $success-light,
   );
+  
+  @function spacing($spacing) {
+    @return $spacing * 8px;
+  }
+  
